 * Added deprecated message to all BackCompatability methods
 * Fixed bug that meant Screen::EPrint::View didn't work
 * Removed some commented out old code from the end of XML
 * Changed default eprints citation file to have eprints, not
    xhtml as the default namespace.

2006-09-05 cjg
 * Made Script use objects for the compiler and compiled scripts.
 * <print /> now can have a opts attribute to set render options
 * Script now has a cleaner tokeniser
 * Script now gets fields from dataobjs using $item{foo}
 * a bareword in a Script eg. foo is now equiv to $item{foo}

2006-09-11 cjg
 * Removed priv code from Apache::Auth
 * Fixed typo in workflow
 * Removed auth_check and has_privilage from Session.pm
 * Removed the priv code from Processor.pm that is no longer used.
 * $user->is_owner and is_editor now take any dataobj, not just eprints.
 * renamed can_edit to is_editor (and made a fwd in BackCompatability)
 * Removed TDB's get_roles method
 * Added system which turns macro user privs into ep3 privs (mapping)
 * Added get_privs and get_roles methods to User.
 * Removed check in EPrint which said only owners or editors can 
    post new versions of an eprint.

2006-06-11 cjg
 * Fixed bug in run_eq and run_oneof EPScript methods.
 * Added integers to epscript
 * expr's in citations which resolve to boolean, int or string now
    get rendered - handy for debugging.
 * added new epscript function: length() to return the length of
    a list.
 * Modified default citation to make ed/eds show when eds list is 
    plural/single.

2006-06-11 cjg
 * Restored hide help/show help buttons in surround/default
 * Added a [-] button to collapsed fields which have been un-collapsed.

2006-06-12 cjg
 * HTML-Escaped the error message in abort()

2006-06-12 cjg
 * Fixed Issue in Language with spanning pins being passed as a fragment
    containing just that one element. Internal nodes were added to the
    fragment not inside the element.

    